# TVBoxOSC

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/java/com/github/tvbox/osc/player/controller/: VodController.java
app/src/main/java/com/github/tvbox/osc/server/: ControlManager.java  DownloadManager.java
app/src/main/java/com/github/tvbox/osc/ui/activity/: PlayActivity.java  SearchActivity.java
app/src/main/java/com/github/tvbox/osc/ui/fragment/: ModelSettingFragment.java
app/src/main/res/layout/: player_vod_control_view.xml
gradle/wrapper/: gradle-wrapper.properties
ijkplayer-arm64/: CMakeLists.txt  build.gradle
ijkplayer-arm64/src/main/: AndroidManifest.xml
ijkplayer-arm64/src/main/jni/android-ndk-prof/: CMakeLists.txt  prof.c  prof.h
ijkplayer-arm64/src/main/jni/ijkmedia/ijkplayer/: CMakeLists.txt  ff_downloader.c  ff_downloader.h  ff_ffplay.c
ijkplayer-arm64/src/main/jni/ijkmedia/ijkplayer/android/: ijkplayer_jni.c
ijkplayer-arm64/src/main/jni/ijkmedia/ijksdl/: CMakeLists.txt
ijkplayer-arm64/src/main/jni/ijkmedia/ijksdl/gles2/: internal.h
ijkplayer-java/: build.gradle
ijkplayer-java/src/main/: AndroidManifest.xml
ijkplayer-java/src/main/java/tv/danmaku/ijk/media/player/: IjkMediaPlayer.java
player/: build.gradle
player/src/main/ijk/tv/danmaku/ijk/media/player/: IjkMediaPlayer.java
player/src/main/java/xyz/doikki/videoplayer/ijk/: IjkPlayer.java
